[gd_scene load_steps=5 format=3 uid="uid://sn00a81hcxsg"]

[ext_resource type="Script" path="res://MainScene.gd" id="1_ce0tq"]
[ext_resource type="PackedScene" uid="uid://cubvp4xm6vosd" path="res://characters/happy_boo/player.tscn" id="2_bg6cf"]
[ext_resource type="AudioStream" uid="uid://5liv1jbo4vma" path="res://assets/audio/background-new.mp3" id="3_bwk3v"]

[sub_resource type="Curve2D" id="Curve2D_eomd7"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 2378, -164, 0, 0, 0, 0, 2375, 503, 0, 0, 0, 0, 2378, 1170, 0, 0, 0, 0, 2383, 1565, 0, 0, 0, 0, -434, 1566, 0, 0, 0, 0, -434, -292, 0, 0, 0, 0, 2377, -262, 0, 0, 0, 0, 2371, -154)
}
point_count = 8

[node name="MainScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ce0tq")

[node name="EscapeMenu" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false

[node name="ColorRect" type="ColorRect" parent="EscapeMenu"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.513726)

[node name="Label" type="Label" parent="EscapeMenu/ColorRect"]
layout_mode = 0
offset_left = 766.0
offset_top = 431.0
offset_right = 1282.0
offset_bottom = 688.0
theme_override_font_sizes/font_size = 100
text = "Menu"

[node name="RestartButton" type="Button" parent="EscapeMenu/ColorRect"]
layout_mode = 0
offset_left = 745.0
offset_top = 576.0
offset_right = 1068.0
offset_bottom = 678.0
text = "Restart"

[node name="QuitButton" type="Button" parent="EscapeMenu/ColorRect"]
layout_mode = 0
offset_left = 745.0
offset_top = 697.0
offset_right = 1068.0
offset_bottom = 799.0
text = "Quit"

[node name="GameOver" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false

[node name="ColorRect" type="ColorRect" parent="GameOver"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.513726)

[node name="LabelGameOver" type="Label" parent="GameOver/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -43.5
offset_top = -11.5
offset_right = 43.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 200
text = "Game Over"

[node name="RestartButtonGameOver" type="Button" parent="GameOver/ColorRect"]
layout_mode = 0
offset_left = 748.0
offset_top = 675.0
offset_right = 1071.0
offset_bottom = 777.0
text = "Restart"

[node name="GoalHud" type="CanvasLayer" parent="."]
visible = false

[node name="GoalLabel" type="Label" parent="GoalHud"]
unique_name_in_owner = true
offset_right = 40.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 50
text = "Slimes Killed: 0 / 30"

[node name="SceneLoader" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2(2, 2)

[node name="AmmoLabel" type="Label" parent="SceneLoader"]
unique_name_in_owner = true
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 802.0
offset_top = 969.0
offset_right = 1089.0
offset_bottom = 1038.0
grow_vertical = 0
theme_override_font_sizes/font_size = 50
text = "Ammo: 10"

[node name="Camera2D" type="Camera2D" parent="SceneLoader"]
position = Vector2(958, 537)
limit_left = 0
limit_top = 0
limit_right = 1922
limit_bottom = 1080
editor_draw_limits = true

[node name="Player" parent="SceneLoader" instance=ExtResource("2_bg6cf")]
unique_name_in_owner = true
position = Vector2(958, 537)

[node name="Path2D" type="Path2D" parent="SceneLoader/Player"]
position = Vector2(-866, -603)
curve = SubResource("Curve2D_eomd7")

[node name="PathFollow2D" type="PathFollow2D" parent="SceneLoader/Player/Path2D"]
unique_name_in_owner = true
position = Vector2(2378, -164)
rotation = 1.57529
scale = Vector2(-45.2157, 63.0149)

[node name="BackgroundMusic" type="AudioStreamPlayer2D" parent="SceneLoader/Player"]
unique_name_in_owner = true
position = Vector2(-959, -538)
stream = ExtResource("3_bwk3v")
volume_db = -9.124

[node name="SoundEffects" type="AudioStreamPlayer" parent="SceneLoader/Player"]

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="SceneLoader/Player"]
remote_path = NodePath("../../Camera2D")

[connection signal="pressed" from="EscapeMenu/ColorRect/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="EscapeMenu/ColorRect/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="GameOver/ColorRect/RestartButtonGameOver" to="." method="_on_restart_button_game_over_pressed"]
[connection signal="health_depleted" from="SceneLoader/Player" to="." method="_on_player_health_depleted"]
